--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
       <nav>
         <button data-tab="intro">Intro</button>
         <button data-tab="experience">About</button>
-        <button data-tab="skill">Skill</button>
+        <button data-tab="skill">Technologies</button>
         <button data-tab="project">Project</button>
         <button data-tab="contact">Contact</button>
       </nav>
     </header>
     <!-- end of header -->
 
-    <!-- introduction -->
+    <!-- intro -->
     <div class="tab" id="intro">
       <div class="container">
         <div class="avatar">
           <img src="images/avatar3.png" alt="Avatar" class="intro__img" />
         </div>
-        <div class="content">
-          <div class="name">The Studio:</div>
-          <div class="job">
+        <div class="intro-content">
+          <div class="intro-content__name">The Studio:</div>
+          <div class="intro-content__job">
             Where Vision Meets <span class="text-gradient"> Creation</span>
           </div>
-          <div class="des">
+          <div class="intro-content__des">
             Crafting Seamless & Engaging Digital Experiences I turn complex
             challenges into elegant, user-centered web solutions. With a blend
             of technical precision and creative intuition, I build applications
@@ -50,16 +50,16 @@
         </div>
       </div>
     </div>
-    <!-- end introduction -->
+    <!-- end intro -->
 
     <!-- exp -->
     <div class="tab" id="experience">
       <div class="container">
-        <div class="about-and-list">
+        <div class="experience-about-and-list">
           <!-- about -->
-          <div class="about">
-            <div class="title text-gradient">My Journey</div>
-            <div class="subtitle">
+          <div class="experience-about">
+            <div class="experience-about__title text-gradient">My Journey</div>
+            <div class="experience-about__subtitle">
               As a former experienced water/wastewater professional who
               transitioned to web development, I bring a unique engineering
               mindset to coding. After relocating from the Philippines to
@@ -74,7 +74,7 @@
             </div>
           </div>
           <!-- end about -->
-          <div class="list-wrapper">
+          <div class="experience-about__list-wrapper">
             <div class="list">
               <!-- college -->
               <div class="item">
@@ -169,11 +169,11 @@
       <div class="container">
         <div class="about-and-list">
           <!-- about -->
-          <div class="about">
-            <div class="title text-gradient">
+          <div class="skill-about">
+            <div class="skill-about__title text-gradient">
               My Toolkit: Crafting Digital Experiences
             </div>
-            <div class="subtitle">
+            <div class="skill-about__subtitle">
               A curated selection of tools and technologies that bring my ideas
               to life.
             </div>
