--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
             </div>
           </div>
           <!-- end about -->
-          <div class="experience-about__list-wrapper">
-            <div class="list">
+          <div class="exp-about__list-wrapper">
+            <div class="exp-list">
               <!-- college -->
-              <div class="item">
-                <div class="time">2006</div>
+              <div class="exp-item">
+                <div class="exp-time">2006</div>
                 <i class="fa-solid fa-graduation-cap"></i>
-                <div class="content">
-                  <div class="job">
+                <div class="exp-content">
+                  <div class="exp-job">
                     Bachelor of Science in Information Technology
                   </div>
-                  <div class="company">Name of School</div>
-                  <div class="des">
+                  <div class="exp-company">Name of School</div>
+                  <div class="exp-des">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Dignissimos inventore sint, reprehenderit ab iste officiis
                     quam, fugiat officia maxime ex cupiditate aspernatur cum!
@@ -95,13 +95,13 @@
               <!-- end college -->
 
               <!-- cad -->
-              <div class="item">
-                <div class="time">2009</div>
+              <div class="exp-item">
+                <div class="exp-time">2009</div>
                 <i class="fa-solid fa-screwdriver-wrench"></i>
-                <div class="content">
-                  <div class="job">Autocad Operator</div>
-                  <div class="company">Alpine Systems Corporation</div>
-                  <div class="des">
+                <div class="exp-content">
+                  <div class="exp-job">Autocad Operator</div>
+                  <div class="exp-company">Alpine Systems Corporation</div>
+                  <div class="exp-des">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
@@ -111,13 +111,13 @@
               <!-- end cad -->
 
               <!-- pic -->
-              <div class="item">
-                <div class="time">2009</div>
+              <div class="exp-item">
+                <div class="exp-time">2009</div>
                 <i class="fa-solid fa-screwdriver-wrench"></i>
-                <div class="content">
-                  <div class="job">Project in Charge</div>
-                  <div class="company">Alpine Systems Corporation</div>
-                  <div class="des">
+                <div class="exp-content">
+                  <div class="exp-job">Project in Charge</div>
+                  <div class="exp-company">Alpine Systems Corporation</div>
+                  <div class="exp-des">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
@@ -127,13 +127,13 @@
               <!-- end pic -->
 
               <!-- aec -->
-              <div class="item">
-                <div class="time">2016</div>
+              <div class="exp-item">
+                <div class="exp-time">2016</div>
                 <i class="fa-solid fa-user-tie"></i>
-                <div class="content">
-                  <div class="job">Project Manager</div>
-                  <div class="company">AEC Water Tech</div>
-                  <div class="des">
+                <div class="exp-content">
+                  <div class="exp-job">Project Manager</div>
+                  <div class="exp-company">AEC Water Tech</div>
+                  <div class="exp-des">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
@@ -143,13 +143,15 @@
               <!-- end aec -->
 
               <!-- relocation / retraining -->
-              <div class="item 2017">
-                <div class="time">2022</div>
+              <div class="exp-item">
+                <div class="exp-time">2022</div>
                 <i class="fa-solid fa-rocket"></i>
-                <div class="content">
-                  <div class="job">Software Engineer</div>
-                  <div class="company">ReDI School of Digital Integration</div>
-                  <div class="des">
+                <div class="exp-content">
+                  <div class="exp-job">Software Engineer</div>
+                  <div class="exp-company">
+                    ReDI School of Digital Integration
+                  </div>
+                  <div class="exp-des">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
@@ -232,7 +234,7 @@
           <div class="item">
             <div class="image-container">
               <img src="images/project1.jpg" alt="" />
-              <div class="links">
+              <div class="proj-links">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -249,16 +251,16 @@
                 </a>
               </div>
             </div>
-            <div class="index">#1</div>
-            <div class="name">Project Name</div>
-            <div class="des">
+            <div class="proj-index">#1</div>
+            <div class="proj-name">Project Name</div>
+            <div class="proj-des">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="author">
-              <div class="job">FullStack</div>
-              <div class="time">
+            <div class="proj-author">
+              <div class="proj-job">FullStack</div>
+              <div class="proj-time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
               </div>
@@ -270,7 +272,7 @@
           <div class="item">
             <div class="image-container">
               <img src="images/project2.jpg" alt="" />
-              <div class="links">
+              <div class="proj-links">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -287,16 +289,16 @@
                 </a>
               </div>
             </div>
-            <div class="index">#2</div>
-            <div class="name">Project Name</div>
-            <div class="des">
+            <div class="proj-index">#2</div>
+            <div class="proj-name">Project Name</div>
+            <div class="proj-des">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="author">
-              <div class="job">FullStack</div>
-              <div class="time">
+            <div class="proj-author">
+              <div class="proj-job">FullStack</div>
+              <div class="proj-time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
               </div>
@@ -307,7 +309,7 @@
           <div class="item">
             <div class="image-container">
               <img src="images/project3.jpg" alt="" />
-              <div class="links">
+              <div class="proj-links">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -324,16 +326,16 @@
                 </a>
               </div>
             </div>
-            <div class="index">#3</div>
-            <div class="name">Project Name</div>
-            <div class="des">
+            <div class="proj-index">#3</div>
+            <div class="proj-name">Project Name</div>
+            <div class="proj-des">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="author">
-              <div class="job">FullStack</div>
-              <div class="time">
+            <div class="proj-author">
+              <div class="proj-job">FullStack</div>
+              <div class="proj-time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
               </div>
@@ -345,7 +347,7 @@
           <div class="item">
             <div class="image-container">
               <img src="images/project4.jpg" alt="" />
-              <div class="links">
+              <div class="proj-links">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -362,15 +364,15 @@
                 </a>
               </div>
             </div>
-            <div class="index">#4</div>
-            <div class="name">Project Name</div>
-            <div class="des">
+            <div class="proj-index">#4</div>
+            <div class="proj-name">Project Name</div>
+            <div class="proj-des">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="author">
-              <div class="job">FullStack</div>
+            <div class="proj-author">
+              <div class="proj-job">FullStack</div>
               <div class="time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
@@ -383,7 +385,7 @@
           <div class="item">
             <div class="image-container">
               <img src="images/project5.jpg" alt="" />
-              <div class="links">
+              <div class="proj-links">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -400,15 +402,15 @@
                 </a>
               </div>
             </div>
-            <div class="index">#5</div>
-            <div class="name">Project Name</div>
-            <div class="des">
+            <div class="proj-index">#5</div>
+            <div class="proj-name">Project Name</div>
+            <div class="proj-des">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="author">
-              <div class="job">FullStack</div>
+            <div class="proj-author">
+              <div class="proj-job">FullStack</div>
               <div class="time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
