--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <div class="tab" id="intro">
       <div class="container">
         <div class="avatar">
-          <img src="images/avatar3.png" alt="Avatar" class="intro__img" />
+          <img src="images/avatar3.png" alt="Avatar" class="introImg" />
         </div>
-        <div class="intro-content">
-          <div class="intro-content__name">The Studio:</div>
-          <div class="intro-content__job">
+        <div class="introContent">
+          <div class="introContentName">The Studio:</div>
+          <div class="introContentJob">
             Where Vision Meets <span class="text-gradient"> Creation</span>
           </div>
-          <div class="intro-content__des">
+          <div class="introContentDes">
             Crafting Seamless & Engaging Digital Experiences I turn complex
             challenges into elegant, user-centered web solutions. With a blend
             of technical precision and creative intuition, I build applications
@@ -55,11 +55,11 @@
     <!-- exp -->
     <div class="tab" id="experience">
       <div class="container">
-        <div class="experience-about-and-list">
+        <div class="experienceAboutAndList">
           <!-- about -->
-          <div class="experience-about">
-            <div class="experience-about__title text-gradient">My Journey</div>
-            <div class="experience-about__subtitle">
+          <div class="experienceAbout">
+            <div class="experienceAboutTitle text-gradient">My Journey</div>
+            <div class="experienceAboutSubtitle">
               As a former experienced water/wastewater professional who
               transitioned to web development, I bring a unique engineering
               mindset to coding. After relocating from the Philippines to
@@ -74,18 +74,18 @@
             </div>
           </div>
           <!-- end about -->
-          <div class="exp-about__list-wrapper">
-            <div class="exp-list">
+          <div class="expAboutListWrapper">
+            <div class="expList">
               <!-- college -->
-              <div class="exp-item">
-                <div class="exp-time">2006</div>
+              <div class="expItem">
+                <div class="expTime">2006</div>
                 <i class="fa-solid fa-graduation-cap"></i>
-                <div class="exp-content">
-                  <div class="exp-job">
+                <div class="expContent">
+                  <div class="expJob">
                     Bachelor of Science in Information Technology
                   </div>
-                  <div class="exp-company">Name of School</div>
-                  <div class="exp-des">
+                  <div class="expCompany">Name of School</div>
+                  <div class="expDes">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Dignissimos inventore sint, reprehenderit ab iste officiis
                     quam, fugiat officia maxime ex cupiditate aspernatur cum!
@@ -95,13 +95,13 @@
               <!-- end college -->
 
               <!-- cad -->
-              <div class="exp-item">
-                <div class="exp-time">2009</div>
+              <div class="expItem">
+                <div class="expTime">2009</div>
                 <i class="fa-solid fa-screwdriver-wrench"></i>
-                <div class="exp-content">
-                  <div class="exp-job">Autocad Operator</div>
-                  <div class="exp-company">Alpine Systems Corporation</div>
-                  <div class="exp-des">
+                <div class="expContent">
+                  <div class="expJob">Autocad Operator</div>
+                  <div class="expCompany">Alpine Systems Corporation</div>
+                  <div class="expDes">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
@@ -111,13 +111,13 @@
               <!-- end cad -->
 
               <!-- pic -->
-              <div class="exp-item">
-                <div class="exp-time">2009</div>
+              <div class="expItem">
+                <div class="expTime">2009</div>
                 <i class="fa-solid fa-screwdriver-wrench"></i>
-                <div class="exp-content">
-                  <div class="exp-job">Project in Charge</div>
-                  <div class="exp-company">Alpine Systems Corporation</div>
-                  <div class="exp-des">
+                <div class="expContent">
+                  <div class="expJob">Project in Charge</div>
+                  <div class="expCompany">Alpine Systems Corporation</div>
+                  <div class="expDes">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
@@ -127,13 +127,13 @@
               <!-- end pic -->
 
               <!-- aec -->
-              <div class="exp-item">
-                <div class="exp-time">2016</div>
+              <div class="expItem">
+                <div class="expTime">2016</div>
                 <i class="fa-solid fa-user-tie"></i>
-                <div class="exp-content">
-                  <div class="exp-job">Project Manager</div>
-                  <div class="exp-company">AEC Water Tech</div>
-                  <div class="exp-des">
+                <div class="expContent">
+                  <div class="expJob">Project Manager</div>
+                  <div class="expCompany">AEC Water Tech</div>
+                  <div class="expDes">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
@@ -143,15 +143,15 @@
               <!-- end aec -->
 
               <!-- relocation / retraining -->
-              <div class="exp-item">
-                <div class="exp-time">2022</div>
+              <div class="expItem">
+                <div class="expTime">2022</div>
                 <i class="fa-solid fa-rocket"></i>
-                <div class="exp-content">
-                  <div class="exp-job">Software Engineer</div>
-                  <div class="exp-company">
+                <div class="expContent">
+                  <div class="expJob">Software Engineer</div>
+                  <div class="expCompany">
                     ReDI School of Digital Integration
                   </div>
-                  <div class="exp-des">
+                  <div class="expDes">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nihil blanditiis dolores sint sit dicta natus provident
                     quibusdam eum nemo sed!
