--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="introContent">
           <div class="introContentName">The Studio:</div>
           <div class="introContentJob">
-            Where Vision Meets <span class="text-gradient"> Creation</span>
+            Where Vision Meets <span class="textGradient"> Creation</span>
           </div>
           <div class="introContentDes">
             Crafting Seamless & Engaging Digital Experiences I turn complex
@@ -42,9 +42,7 @@
             take on is a balance of performance, aesthetics, and an intuitive
             user experience—designed to leave a lasting impression.
             <br />
-            <button class="text-gradient" data-tab="skill">
-              See my Skills
-            </button>
+            <button class="textGradient" data-tab="skill">See my Skills</button>
           </div>
           <i class="fa-solid fa-quote-right"></i>
         </div>
@@ -58,7 +56,7 @@
         <div class="experienceAboutAndList">
           <!-- about -->
           <div class="experienceAbout">
-            <div class="experienceAboutTitle text-gradient">My Journey</div>
+            <div class="experienceAboutTitle textGradient">My Journey</div>
             <div class="experienceAboutSubtitle">
               As a former experienced water/wastewater professional who
               transitioned to web development, I bring a unique engineering
@@ -172,7 +170,7 @@
         <div class="about-and-list">
           <!-- about -->
           <div class="skill-about">
-            <div class="skill-about__title text-gradient">
+            <div class="skill-about__title textGradient">
               My Toolkit: Crafting Digital Experiences
             </div>
             <div class="skill-about__subtitle">
@@ -426,7 +424,7 @@
     <!-- contact -->
     <div class="tab" id="contact">
       <div class="container">
-        <div class="thank text-gradient">Thank You!</div>
+        <div class="thank textGradient">Thank You!</div>
         <div class="des">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
           nulla eum. Rem, porro sint possimus necessitatibus provident quidem
@@ -435,7 +433,7 @@
           delectus laborum possimus tenetur nihil, iste odit quibusdam dolore
           vero commodi eum voluptas deserunt!
           <br />
-          <button data-tab="intro" class="text-gradient">See my Intro</button>
+          <button data-tab="intro" class="textGradient">See my Intro</button>
         </div>
         <div class="list">
           <div class="item">
