fix/css naming typos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="introContent">
           <div class="introContentName">The Studio:</div>
           <div class="introContentJob">
-            Where Vision Meets <span class="text-gradient"> Creation</span>
+            Where Vision Meets <span class="textGradient"> Creation</span>
           </div>
           <div class="introContentDes">
             Crafting Seamless & Engaging Digital Experiences I turn complex
@@ -42,9 +42,7 @@
             take on is a balance of performance, aesthetics, and an intuitive
             user experience—designed to leave a lasting impression.
             <br />
-            <button class="text-gradient" data-tab="skill">
-              See my Skills
-            </button>
+            <button class="textGradient" data-tab="skill">See my Skills</button>
           </div>
           <i class="fa-solid fa-quote-right"></i>
         </div>
@@ -58,7 +56,7 @@
         <div class="experienceAboutAndList">
           <!-- about -->
           <div class="experienceAbout">
-            <div class="experienceAboutTitle text-gradient">My Journey</div>
+            <div class="experienceAboutTitle textGradient">My Journey</div>
             <div class="experienceAboutSubtitle">
               As a former experienced water/wastewater professional who
               transitioned to web development, I bring a unique engineering
@@ -74,7 +72,7 @@
             </div>
           </div>
           <!-- end about -->
-          <div class="expAboutListWrapper">
+          <div class="listWrapper">
             <div class="expList">
               <!-- college -->
               <div class="expItem">
@@ -84,7 +82,7 @@
                   <div class="expJob">
                     Bachelor of Science in Information Technology
                   </div>
-                  <div class="expCompany">Name of School</div>
+                  <div class="expCompany">AMA Computer College</div>
                   <div class="expDes">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Dignissimos inventore sint, reprehenderit ab iste officiis
@@ -169,26 +167,26 @@
     <!-- skill -->
     <div class="tab" id="skill">
       <div class="container">
-        <div class="about-and-list">
+        <div class="aboutAndList">
           <!-- about -->
-          <div class="skill-about">
-            <div class="skill-about__title text-gradient">
+          <div class="skillAbout">
+            <div class="skillAboutTitle textGradient">
               My Toolkit: Crafting Digital Experiences
             </div>
-            <div class="skill-about__subtitle">
+            <div class="skillAboutSubtitle">
               A curated selection of tools and technologies that bring my ideas
               to life.
             </div>
           </div>
           <!-- end about -->
-          <div class="list-wrapper">
-            <div class="skill-list">
+          <div class="listWrapper">
+            <div class="skillList">
               <!-- frontend arsenal -->
-              <div class="skill__item">
-                <div class="skill__container">
+              <div class="skillItem">
+                <div class="skillContainer">
                   <i class="fa-brands fa-react"></i>
-                  <div class="skill__title">Front-End Arsenal</div>
-                  <div class="skill__paragraph">
+                  <div class="skillTitle">Front-End Arsenal</div>
+                  <div class="skillParagraph">
                     Experience with <br />
                     React.js, React Router, Axios
                   </div>
@@ -196,11 +194,11 @@
               </div>
               <!-- end frontend arsenal -->
               <!-- backend arsenal -->
-              <div class="skill__item">
-                <div class="skill__container">
+              <div class="skillItem">
+                <div class="skillContainer">
                   <i class="fa-solid fa-database"></i>
-                  <div class="skill__title">Backend Arsenal</div>
-                  <div class="skill__paragraph">
+                  <div class="skillTitle">Backend Arsenal</div>
+                  <div class="skillParagraph">
                     Experience with <br />
                     Node.js, Express, MongoDB, PostgreSQL, Vite
                   </div>
@@ -208,11 +206,11 @@
               </div>
               <!-- end backend arsenal -->
               <!-- design arsenal -->
-              <div class="skill__item">
-                <div class="skill__container">
+              <div class="skillItem">
+                <div class="skillContainer">
                   <i class="fa-brands fa-figma"></i>
-                  <div class="skill__title">Design Workshop</div>
-                  <div class="skill__paragraph">
+                  <div class="skillTitle">Design Workshop</div>
+                  <div class="skillParagraph">
                     Experience with <br />
                     Tools like Figma
                   </div>
@@ -229,12 +227,12 @@
     <!-- project -->
     <div class="tab" id="project">
       <div class="container">
-        <div class="list">
+        <div class="projectList">
           <!-- proj 1 -->
           <div class="item">
-            <div class="image-container">
+            <div class="imageContainer">
               <img src="images/project1.jpg" alt="" />
-              <div class="proj-links">
+              <div class="projLinks">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -251,16 +249,16 @@
                 </a>
               </div>
             </div>
-            <div class="proj-index">#1</div>
-            <div class="proj-name">Project Name</div>
-            <div class="proj-des">
+            <div class="projIndex">#1</div>
+            <div class="projName">Project Name</div>
+            <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="proj-author">
-              <div class="proj-job">FullStack</div>
-              <div class="proj-time">
+            <div class="projAuthor">
+              <div class="projJob">FullStack</div>
+              <div class="time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
               </div>
@@ -270,9 +268,9 @@
 
           <!-- proj 2 -->
           <div class="item">
-            <div class="image-container">
+            <div class="imageContainer">
               <img src="images/project2.jpg" alt="" />
-              <div class="proj-links">
+              <div class="projLinks">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -289,16 +287,16 @@
                 </a>
               </div>
             </div>
-            <div class="proj-index">#2</div>
-            <div class="proj-name">Project Name</div>
-            <div class="proj-des">
+            <div class="projIndex">#2</div>
+            <div class="projName">Project Name</div>
+            <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="proj-author">
-              <div class="proj-job">FullStack</div>
-              <div class="proj-time">
+            <div class="projAuthor">
+              <div class="projJob">FullStack</div>
+              <div class="time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
               </div>
@@ -307,9 +305,9 @@
           <!-- end proj 2 -->
           <!-- proj 3 -->
           <div class="item">
-            <div class="image-container">
+            <div class="imageContainer">
               <img src="images/project3.jpg" alt="" />
-              <div class="proj-links">
+              <div class="projLinks">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -326,16 +324,16 @@
                 </a>
               </div>
             </div>
-            <div class="proj-index">#3</div>
-            <div class="proj-name">Project Name</div>
-            <div class="proj-des">
+            <div class="projIndex">#3</div>
+            <div class="projName">Project Name</div>
+            <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="proj-author">
-              <div class="proj-job">FullStack</div>
-              <div class="proj-time">
+            <div class="projAuthor">
+              <div class="projJob">FullStack</div>
+              <div class="time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
               </div>
@@ -345,9 +343,9 @@
 
           <!-- proj 4 -->
           <div class="item">
-            <div class="image-container">
+            <div class="imageContainer">
               <img src="images/project4.jpg" alt="" />
-              <div class="proj-links">
+              <div class="projLinks">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -364,15 +362,15 @@
                 </a>
               </div>
             </div>
-            <div class="proj-index">#4</div>
-            <div class="proj-name">Project Name</div>
-            <div class="proj-des">
+            <div class="projIndex">#4</div>
+            <div class="projName">Project Name</div>
+            <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="proj-author">
-              <div class="proj-job">FullStack</div>
+            <div class="projAuthor">
+              <div class="projJob">FullStack</div>
               <div class="time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
@@ -383,9 +381,9 @@
 
           <!-- proj 5 -->
           <div class="item">
-            <div class="image-container">
+            <div class="imageContainer">
               <img src="images/project5.jpg" alt="" />
-              <div class="proj-links">
+              <div class="projLinks">
                 <a
                   href="https://github.com/your-repo"
                   target="_blank"
@@ -402,15 +400,15 @@
                 </a>
               </div>
             </div>
-            <div class="proj-index">#5</div>
-            <div class="proj-name">Project Name</div>
-            <div class="proj-des">
+            <div class="projIndex">#5</div>
+            <div class="projName">Project Name</div>
+            <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
-            <div class="proj-author">
-              <div class="proj-job">FullStack</div>
+            <div class="projAuthor">
+              <div class="projJob">FullStack</div>
               <div class="time">
                 2022/10/10
                 <i class="fa-regular fa-clock"></i>
@@ -426,8 +424,8 @@
     <!-- contact -->
     <div class="tab" id="contact">
       <div class="container">
-        <div class="thank text-gradient">Thank You!</div>
-        <div class="des">
+        <div class="thank textGradient">Thank You!</div>
+        <div class="contactDes">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
           nulla eum. Rem, porro sint possimus necessitatibus provident quidem
           suscipit nihil dolor molestias maxime inventore! Reiciendis magnam
@@ -435,22 +433,22 @@
           delectus laborum possimus tenetur nihil, iste odit quibusdam dolore
           vero commodi eum voluptas deserunt!
           <br />
-          <button data-tab="intro" class="text-gradient">See my Intro</button>
+          <button data-tab="intro" class="textGradient">See my Intro</button>
         </div>
-        <div class="list">
-          <div class="item">
+        <div class="contactList">
+          <div class="contactListItem">
             <i class="fa-solid fa-envelope"></i>
             japcenteno@gmail.com
           </div>
-          <div class="item">
+          <div class="contactListItem">
             <i class="fa-solid fa-phone"></i>
             +15734708799
           </div>
-          <div class="item">
+          <div class="contactListItem">
             <i class="fa-brands fa-linkedin"></i>
             https://www.linkedin.com/in/angelo-centeno/
           </div>
-          <div class="item">
+          <div class="contactListItem">
             <i class="fa-brands fa-github"></i>
             https://github.com/japint
           </div>
