fix skill content and responsiveness

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                   </div>
                   <div class="expCompany">AMA Computer College</div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dignissimos inventore sint, reprehenderit ab iste officiis
-                    quam, fugiat officia maxime ex cupiditate aspernatur cum!
+                    Studying BSIT at AMA Computer College has equipped me with
+                    hands-on skills in software development, networking, and IT
+                    systems—preparing me for real-world tech challenges.
                   </div>
                 </div>
               </div>
@@ -169,8 +169,8 @@
       <div class="container">
         <div class="aboutAndList">
           <!-- about -->
-          <div class="skill-about">
-            <div class="skill-about__title text-gradient">
+          <div class="skillAbout">
+            <div class="skillAboutTitle textGradient">
               My Toolkit: Crafting Digital Experiences
             </div>
             <div class="skillAboutSubtitle">
@@ -424,8 +424,8 @@
     <!-- contact -->
     <div class="tab" id="contact">
       <div class="container">
-        <div class="thank text-gradient">Thank You!</div>
-        <div class="des">
+        <div class="thank textGradient">Thank You!</div>
+        <div class="contactDes">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
           nulla eum. Rem, porro sint possimus necessitatibus provident quidem
           suscipit nihil dolor molestias maxime inventore! Reiciendis magnam
