--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <button data-tab="intro">Intro</button>
         <button data-tab="experience">About</button>
-        <button data-tab="skill">Technologies</button>
+        <button data-tab="skill">Tech</button>
         <button data-tab="project">Project</button>
         <button data-tab="contact">Contact</button>
       </nav>
