--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                 <i class="fa-solid fa-screwdriver-wrench"></i>
                 <div class="expContent">
                   <div class="expJob">Autocad Operator</div>
-                  <div class="expCompany">Alpine Systems Corporation</div>
+                  <div class="expCompany">MSQP, KSA</div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Prepared HVAC duct designs and layouts per SMACNA/ISO
+                    standards for projects across KSA and GCC. Supported
+                    drafting for installation and maintenance.
                   </div>
                 </div>
               </div>
@@ -110,15 +110,15 @@
 
               <!-- pic -->
               <div class="expItem">
-                <div class="expTime">2009</div>
+                <div class="expTime">2013</div>
                 <i class="fa-solid fa-screwdriver-wrench"></i>
                 <div class="expContent">
                   <div class="expJob">Project in Charge</div>
-                  <div class="expCompany">Alpine Systems Corporation</div>
+                  <div class="expCompany">Alpine Systems Corporation, Ph</div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Drafted wastewater treatment plant (STP) layouts and piping
+                    systems. Promoted to Project In-Charge, overseeing site
+                    execution, coordination, and project delivery.
                   </div>
                 </div>
               </div>
@@ -126,15 +126,18 @@
 
               <!-- aec -->
               <div class="expItem">
-                <div class="expTime">2016</div>
+                <div class="expTime">2017</div>
                 <i class="fa-solid fa-user-tie"></i>
                 <div class="expContent">
                   <div class="expJob">Project Manager</div>
                   <div class="expCompany">AEC Water Tech</div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Led water and wastewater projects from planning to
+                    execution, ensuring efficient, cost-effective delivery.
+                    Oversaw engineering teams, local fabrication, and site
+                    operations, aligning with AEC’s mission to provide
+                    sustainable and accessible water solutions in the
+                    Philippines.
                   </div>
                 </div>
               </div>
@@ -150,9 +153,10 @@
                     ReDI School of Digital Integration
                   </div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Relocated to Germany and shifted to software engineering
+                    through ReDI School’s Full-Stack program. Completed B1
+                    German, currently pursuing B2 DTB level. Actively seeking
+                    entry-level opportunities in tech.
                   </div>
                 </div>
               </div>
